--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -16,24 +16,8 @@ kong.admin.port=8001
 # 调用 Kong 的超时时间 (ms)
 kong.invoke.timeout=3000
 
-# Redis 地址
-redis.address=127.0.0.1
-
-# Redis 端口
-redis.port=6379
-
-# Redis 密码 (如果无密码, 可以不配置)
-redis.password=
-
-# MySQL 配置参数
-druid.jdbc.url=jdbc:mysql://localhost:3306/apisystem
-druid.jdbc.username=apisystem
-druid.jdbc.password=199231
-
-# CommonTaskPool Define
-task.corePoolSize=2
-task.maxPoolSize=10
-task.keepAliveTime=10
-
 # Matrix Url
 matrix.url=http://101.200.161.129:8080
+
+admin.username=xiaoyu
+admin.password=199231
