--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,24 +16,7 @@ kong.admin.port=
 # 调用 Kong 的超时时间 (ms)
 kong.invoke.timeout=3000
 
-# Redis 地址
-redis.address=
-
-# Redis 端口
-redis.port=
-
-# Redis 密码 (如果无密码, 可以不配置)
-redis.password=
-
-# MySQL 配置参数
-druid.jdbc.url=
-druid.jdbc.username=
-druid.jdbc.password=
-
-# CommonTaskPool Define
-task.corePoolSize=2
-task.maxPoolSize=10
-task.keepAliveTime=10
-
 # Matrix Url
 matrix.url=
+
+admin.list=管理员:admin:admin
