GATE-20 用户系统API对外暴露.

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -17,7 +17,7 @@ kong.admin.port=8001
 kong.invoke.timeout=3000
 
 # Matrix Url
-matrix.url=http://101.200.161.129:8080
+matrix.url=http://localhost:8070
 
-admin.username=xiaoyu
-admin.password=199231
+# 哪些用户可以登录用户系统
+admin.list=shengyufan@163.com,syhily@gmail.com
