--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,8 +1,8 @@
 # Api System Config
-login.exclude.uri=/user/login
+login.exclude.uri=/admin/user/login
 
 # Kong 调用Host
-kong.host=localhost
+kong.host=cat.yufan.me
 
 kong.http.port=8000
 
@@ -16,24 +16,8 @@ kong.admin.port=8001
 # 调用 Kong 的超时时间 (ms)
 kong.invoke.timeout=3000
 
-# Redis 地址
-redis.address=127.0.0.1
-
-# Redis 端口
-redis.port=6379
-
-# Redis 密码 (如果无密码, 可以不配置)
-redis.password=
-
-# MySQL 配置参数
-druid.jdbc.url=jdbc:mysql://localhost:3306/apisystem
-druid.jdbc.username=apisystem
-druid.jdbc.password=199231
-
-# CommonTaskPool Define
-task.corePoolSize=2
-task.maxPoolSize=10
-task.keepAliveTime=10
-
 # Matrix Url
-matrix.url=http://101.200.161.129:8080
+matrix.url=http://localhost:8070
+
+# 哪些用户可以登录用户系统
+admin.list=shengyufan@163.com,syhily@gmail.com
